clean swagger annotationd fix route to add api and version
